--- a/pages/page14.html
+++ b/pages/page14.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Procédé d'écriture</title>
+  <title>Adjectifs Musicaux</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -18,46 +18,56 @@
 <body>
 
   <div class="container py-4">
-    <h1 class="text-center">PROCÉDÉ D'ÉCRITURE</h1>
+    <h1 class="text-center">ADJECTIFS MUSICAUX</h1>
+
+    <!-- Images -->
+    <div class="text-center mb-4">
+      <img src="../images/adjectifs_musicaux.jpg" alt="nuage d'adjectifs musicaux" class="img-fluid rounded shadow">
+    </div>
 
     <!-- Première rangée -->
     <div class="row mb-4">
       <div class="col-md-4">
         <div class="category">
-          <h2>Techniques de composition</h2>
+          <h2>Émotions</h2>
           <div>
-            <span class="selectable">contrepoint</span>
-            <span class="selectable">harmonisation</span>
-            <span class="selectable">orchestration</span>
-            <span class="selectable">variation</span>
-            <span class="selectable">développement thématique</span>
-            <span class="selectable">mélodisation</span>
+            <span class="selectable">émouvant</span>
+            <span class="selectable">envoûtant</span>
+            <span class="selectable">angoissant</span>
+            <span class="selectable">joyeux</span>
+            <span class="selectable">nostalgique</span>
+            <span class="selectable">mélancolique</span>
+            <span class="selectable">apaisant</span>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="category">
-          <h2>Styles d'écriture</h2>
+          <h2>Caractère</h2>
           <div>
-            <span class="selectable">homophonique</span>
-            <span class="selectable">polyphonique</span>
-            <span class="selectable">hétérophonique</span>
-            <span class="selectable">monodique</span>
-            <span class="selectable">antiphonique</span>
+            <span class="selectable">délicat</span>
+            <span class="selectable">puissant</span>
+            <span class="selectable">enjoué</span>
+            <span class="selectable">solennel</span>
+            <span class="selectable">majestueux</span>
+            <span class="selectable">intime</span>
+            <span class="selectable">dramatique</span>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="category">
-          <h2>Formes classiques</h2>
+          <h2>Texture</h2>
           <div>
-            <span class="selectable">fugue</span>
-            <span class="selectable">canon</span>
-            <span class="selectable">sonate</span>
-            <span class="selectable">rondo</span>
-            <span class="selectable">thème et variations</span>
+            <span class="selectable">aérien</span>
+            <span class="selectable">dense</span>
+            <span class="selectable">cristallin</span>
+            <span class="selectable">velouté</span>
+            <span class="selectable">rugueux</span>
+            <span class="selectable">fluide</span>
+            <span class="selectable">granuleux</span>
           </div>
         </div>
       </div>
@@ -67,39 +77,45 @@
     <div class="row mb-4">
       <div class="col-md-4">
         <div class="category">
-          <h2>Techniques contemporaines</h2>
+          <h2>Mouvement</h2>
           <div>
-            <span class="selectable">sérialisme</span>
-            <span class="selectable">aléatoire</span>
-            <span class="selectable">spectralisme</span>
-            <span class="selectable">minimalisme</span>
-            <span class="selectable">polyrythmie</span>
+            <span class="selectable">entraînant</span>
+            <span class="selectable">languissant</span>
+            <span class="selectable">saccadé</span>
+            <span class="selectable">ondulant</span>
+            <span class="selectable">frénétique</span>
+            <span class="selectable">mesuré</span>
+            <span class="selectable">chaloupé</span>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="category">
-          <h2>Éléments structurels</h2>
+          <h2>Timbre</h2>
           <div>
-            <span class="selectable">motif</span>
-            <span class="selectable">thème</span>
-            <span class="selectable">phrase</span>
-            <span class="selectable">période</span>
-            <span class="selectable">ostinato</span>
+            <span class="selectable">chaud</span>
+            <span class="selectable">métallique</span>
+            <span class="selectable">boisé</span>
+            <span class="selectable">sourd</span>
+            <span class="selectable">éclatant</span>
+            <span class="selectable">nasillard</span>
+            <span class="selectable">soyeux</span>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="category">
-          <h2>Procédés spécifiques</h2>
+          <h2>Impression globale</h2>
           <div>
-            <span class="selectable">imitation</span>
-            <span class="selectable">inversion</span>
-            <span class="selectable">rétrogradation</span>
-            <span class="selectable">augmentation</span>
-            <span class="selectable">diminution</span>
+            <span class="selectable">envoûtant</span>
+            <span class="selectable">hypnotique</span>
+            <span class="selectable">transcendant</span>
+            <span class="selectable">captivant</span>
+            <span class="selectable">enveloppant</span>
+            <span class="selectable">immersionnel</span>
+            <span class="selectable">évocateur</span>
           </div>
         </div>
       </div>
